# sound-example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clean  configure
include/: AudioFile.hpp  AudioPlayer.hpp  FileHandler.hpp  StreamHandler.hpp  util.hpp
src/: AudioPlayer.cpp  FileHandler.cpp  StreamHandler.cpp  main.cpp  util.cpp
